--- a/styles.css
+++ b/styles.css
@@ -11,87 +11,35 @@
 }
 
 /*===================GENERAL-STYLING =====================*/
-
-body {
-  background-color: black;
-}
-
-p {
-  color: white;
-  font-size: 2rem;
+.button {
+  font-size: 3rem;
+  border-radius: 10px;
+  padding: 0.2em;
 }
 
 /* =====================GENERAL-LAYOUT======================== */
-
-.grid-container {
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: repeat(5, 20vh);
+.wrapper {
+  display: flex;
+  justify-content: space-around;
+  margin: 3em;
 }
-
 /* ***************************SPECIFIC-LAYOUT AND SPECIFIC STYLING*************************** */
-
-/* ======================score-section====================== */
-.score-section {
-  background-color: red;
-  grid-column: 1 / 3;
-  grid-row: 1 / 3;
+.results {
   display: flex;
-  flex-direction: column;
-  justify-content: space-around;
+  justify-content: center;
 }
 
-/* ======================cards-section====================== */
-.cards-section {
-  grid-column: 4 / 6;
-  grid-row: 1 / 3;
+.replay-button {
+  background: black;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1.2rem;
+  transition: background 0.5s ease; /* Transition the background-color property */
 }
 
-h2 {
-  text-align: center;
-  font-size: 3rem;
-}
-
-.cards {
-  display: flex;
-  font-size: 4rem;
-  justify-content: space-around;
-  margin-top: 1em;
-}
-
-.card {
-  padding: 0.6em;
-  border-radius: 50%;
-}
-
-.rock-card {
-  background-image: linear-gradient(red, black);
-}
-
-.scissors-card {
-  background-image: linear-gradient(yellow, black);
-}
-
-.paper-card {
-  background-image: linear-gradient(orange, black);
-}
-
-.section {
-  background-color: rgba(255, 192, 203, 0.704);
-}
-/* ======================chosen-cards-section====================== */
-.chosen-cards-section {
-  grid-column: 1 / 3;
-  grid-row: 4 / 6;
-  display: flex;
-  justify-content: space-between;
-}
-
-/* ======================result-section====================== */
-.result-section {
-  grid-column: 4 / 6;
-  grid-row: 4 / 6;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
+.replay-button:hover {
+  background: cyan;
 }
